--- a/index.html
+++ b/index.html
@@ -1,21 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Halaman Login</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Login Page</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div class="login-container">
-        <h2>login</h2>
-        <form id="loginform">
-            <input type="text" placeholder="Username" name="user" autocomplete="off" required>
-            <input type="password" placeholder="password" name="pass" autocomplete="new-password" required>
-            <button type="submit">Masuk</button>
-        </form>
-    </div>
+  <div class="login-container">
+    <h2>Login</h2>
+    <form id="loginForm" autocomplete="off">
+      <input
+        type="text"
+        id="username"
+        name="username"
+        placeholder="Username"
+        required
+        autocomplete="off"
+      />
+      <input
+        type="password"
+        id="password"
+        name="password"
+        placeholder="Password"
+        required
+        autocomplete="new-password"
+      />
+      <button type="submit">Masuk</button>
+    </form>
+  </div>
 
-    <script src="scrpt.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
